--- a/src/NuGetGallery/packages.config
+++ b/src/NuGetGallery/packages.config
@@ -2,11 +2,13 @@
 <packages>
   <package id="AnglicanGeek.MarkdownMailer" version="1.2" targetFramework="net46" />
   <package id="AnglicanGeek.WindowsAzure.ServiceRuntime" version="1.6" targetFramework="net46" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="Autofac" version="3.5.2" targetFramework="net46" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
   <package id="Autofac.Mvc5.Owin" version="3.1.0" targetFramework="net46" />
   <package id="Autofac.Owin" version="3.1.0" targetFramework="net46" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net46" />
+  <package id="CommonMark.NET" version="0.15.1" targetFramework="net46" />
   <package id="d3" version="3.0.2" targetFramework="net46" />
   <package id="DynamicData.EFCodeFirstProvider" version="0.3.0.0" targetFramework="net46" />
   <package id="elmah.corelibrary.strongname" version="1.2.2" targetFramework="net46" />
@@ -60,6 +62,9 @@
   <package id="Microsoft.Data.OData" version="5.6.5-beta" targetFramework="net46" />
   <package id="Microsoft.Data.Services" version="5.6.5-beta" targetFramework="net46" />
   <package id="Microsoft.Data.Services.Client" version="5.6.5-beta" targetFramework="net46" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Logging" version="1.0.0" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.4" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30116.0" targetFramework="net46" />
@@ -72,12 +77,14 @@
   <package id="Microsoft.Owin.Security.OpenIdConnect" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net46" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net46" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Moment.js" version="2.11.2" targetFramework="net46" />
   <package id="MvcTreeView" version="1.4" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="NuGet.Common" version="4.3.0-preview1-2524" targetFramework="net46" />
+  <package id="NuGet.Configuration" version="4.3.0-preview1-2524" targetFramework="net46" />
   <package id="NuGet.Frameworks" version="4.3.0-preview1-2524" targetFramework="net46" />
   <package id="NuGet.Packaging" version="4.3.0-preview1-2524" targetFramework="net46" />
   <package id="NuGet.Packaging.Core" version="4.3.0-preview1-2524" targetFramework="net46" />
@@ -93,10 +100,47 @@
   <package id="QueryInterceptor" version="0.1.4237.2400" targetFramework="net46" />
   <package id="recaptcha" version="1.0.5.0" targetFramework="net46" />
   <package id="RouteMagic" version="1.1.3" targetFramework="net46" />
+  <package id="Serilog" version="2.0.0" targetFramework="net46" />
+  <package id="Serilog.Enrichers.Environment" version="2.1.0" targetFramework="net46" />
+  <package id="Serilog.Enrichers.Process" version="2.0.0" targetFramework="net46" />
+  <package id="Serilog.Extensions.Logging" version="1.2.0" targetFramework="net46" />
+  <package id="Serilog.Sinks.ApplicationInsights" version="2.2.1" targetFramework="net46" />
+  <package id="Serilog.Sinks.ColoredConsole" version="2.0.0" targetFramework="net46" />
+  <package id="SerilogTraceListener" version="2.0.10027" targetFramework="net46" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
   <package id="Strathweb.CacheOutput.WebApi2" version="0.9.0" targetFramework="net46" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net46" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net46" />
+  <package id="System.ComponentModel" version="4.0.1" targetFramework="net46" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net46" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net46" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net46" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net46" />
+  <package id="System.IO" version="4.1.0" targetFramework="net46" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net46" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net46" />
+  <package id="System.Net.Http" version="4.1.0" targetFramework="net46" />
+  <package id="System.Net.Primitives" version="4.0.11" targetFramework="net46" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net46" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net46" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net46" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net46" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net46" />
+  <package id="System.Runtime.Serialization.Json" version="4.0.2" targetFramework="net46" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net46" />
   <package id="System.Spatial" version="5.6.5-beta" targetFramework="net46" />
+  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net46" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net46" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net46" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net46" />
+  <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net46" />
+  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net46" />
+  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net46" />
   <package id="WebActivator" version="1.4.4" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net46" />
   <package id="WebBackgrounder" version="0.2.0" targetFramework="net46" />
