Cleanup and HtmlSanitizer tests

--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -24,16 +24,17 @@
     <!-- DEPLOYMENT SPECIFIC -->
     <!-- ******************* -->
     <!-- These should change on every deployment (to rotate credentials, etc.) -->
-    <add key="Gallery.StorageType" value="FileSystem" />
+    <add key="Gallery.StorageType" value="AzureStorage" />
     <!-- The storage type to use. Can be FileSystem (default) or AzureStorage -->
 
-    <add key="Gallery.AzureStorage.Auditing.ConnectionString" value="" />
-    <add key="Gallery.AzureStorage.Content.ConnectionString" value="" />
-    <add key="Gallery.AzureStorage.Errors.ConnectionString" value="" />
-    <add key="Gallery.AzureStorage.NuGetExe.ConnectionString" value="" />
-    <add key="Gallery.AzureStorage.Packages.ConnectionString" value="" />
-    <add key="Gallery.AzureStorage.Statistics.ConnectionString" value="" />
-    <add key="Gallery.AzureStorage.Uploads.ConnectionString" value="" />
+    <add key="Gallery.AzureStorageConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="Gallery.AzureStorage.Auditing.ConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="Gallery.AzureStorage.Content.ConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="Gallery.AzureStorage.Errors.ConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="Gallery.AzureStorage.NuGetExe.ConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="Gallery.AzureStorage.Packages.ConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="Gallery.AzureStorage.Statistics.ConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="Gallery.AzureStorage.Uploads.ConnectionString" value="UseDevelopmentStorage=true" />
     <!-- The various Azure Storage connection strings to use. If the Gallery.StorageType is AzureStorage, all must be defined. -->
     
     <add key="Gallery.AzureStorageReadAccessGeoRedundant" value="false" />
