--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -24,7 +24,7 @@
     <!-- DEPLOYMENT SPECIFIC -->
     <!-- ******************* -->
     <!-- These should change on every deployment (to rotate credentials, etc.) -->
-    <add key="Gallery.StorageType" value="AzureStorage" />
+    <add key="Gallery.StorageType" value="FileSystem" />
     <!-- The storage type to use. Can be FileSystem (default) or AzureStorage -->
 
     <add key="Gallery.AzureStorageConnectionString" value="UseDevelopmentStorage=true" />
