--- a/src/NuGetGallery/Web.config
+++ b/src/NuGetGallery/Web.config
@@ -27,14 +27,14 @@
     <add key="Gallery.StorageType" value="FileSystem" />
     <!-- The storage type to use. Can be FileSystem (default) or AzureStorage -->
 
-    <add key="Gallery.AzureStorageConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="Gallery.AzureStorage.Auditing.ConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="Gallery.AzureStorage.Content.ConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="Gallery.AzureStorage.Errors.ConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="Gallery.AzureStorage.NuGetExe.ConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="Gallery.AzureStorage.Packages.ConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="Gallery.AzureStorage.Statistics.ConnectionString" value="UseDevelopmentStorage=true" />
-    <add key="Gallery.AzureStorage.Uploads.ConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="Gallery.AzureStorageConnectionString" value="" />
+    <add key="Gallery.AzureStorage.Auditing.ConnectionString" value="" />
+    <add key="Gallery.AzureStorage.Content.ConnectionString" value="" />
+    <add key="Gallery.AzureStorage.Errors.ConnectionString" value="" />
+    <add key="Gallery.AzureStorage.NuGetExe.ConnectionString" value="" />
+    <add key="Gallery.AzureStorage.Packages.ConnectionString" value="" />
+    <add key="Gallery.AzureStorage.Statistics.ConnectionString" value="" />
+    <add key="Gallery.AzureStorage.Uploads.ConnectionString" value="" />
     <!-- The various Azure Storage connection strings to use. If the Gallery.StorageType is AzureStorage, all must be defined. -->
     
     <add key="Gallery.AzureStorageReadAccessGeoRedundant" value="false" />
@@ -129,6 +129,7 @@
     <add key="Gallery.ConfirmEmailAddresses" value="true" />
     <add key="Gallery.CollectPerfLogs" value="false" />
     <add key="Gallery.IsODataFilterEnabled" value="false" />
+    
     <!-- This is also the default so you can remove this setting if you really want. -->
     <!-- Set this to false if you want to disable search indexing in the background. -->
     <add key="Gallery.AutoUpdateSearchIndex" value="true" />
